AMP-30835 fix alignment

--- a/amp/TEMPLATE/reampv2/packages/reampv2-app/src/modules/ndddashboard/medashboard/components/sections/css/Styles.module.css
+++ b/amp/TEMPLATE/reampv2/packages/reampv2-app/src/modules/ndddashboard/medashboard/components/sections/css/Styles.module.css
@@ -41,5 +41,4 @@
 .line_chart_header_text {
     display: flex;
     align-items: center;
-    padding-top: 9px;
 }
